- xtec-booking: Role teacher can no longer edit posts edited by admins or editors, but can still edit bookings (Trello #1421)
- xtec-booking: Fixed some PHP warnings (Trello #1470)
- xtec-ldap-login: Don't send e-mail when user password is updated
- agora-functions: Moved Automatic creation of featured image (Imatge resum) from mu-common to agora-functions (Trello #1284)
- mu-common: Allow external requests to gencat.cat from RSS
- google-analyticator: Upgraded plugin from 6.4.9.7 to 6.5.0.0 (Trello #1372)
- google-calendar-events: Upgraded plugin from 3.1.2 to 3.1.8 (Trello #1447)
- google-calendar-events: In calendar widget, show event information on mouse over (Trello #1462)
- google-calendar-events: Show parameter _default_calendar_expand_multi_day_events for all users (Trello #1352)
- Fixed some debug warnings
- buddypress: Upgraded plugin from 2.5.3 to 2.7.2 (Trello #1446)
- buddypress: Fixed PHP warnings and notices (Trello #1472)
- buddypress-like: Upgraded plugin from 0.2 to 0.3 and converted into a submodule (Trello #1452)
- buddypress-docs: Upgraded plugin from 1.9.0 to 1.9.2 (Trello #1442)
- buddypress-docs: Contributors and Subscribers cannot create documents (Trello #1434)
- reactor: Deleted duplicated favicon (Trello #1419)
- reactor: Allow e-mail in header icons. Changed behaviour when a link is clicked (opening in new window or in current window) (Trello #1437)
- reactor: Changed appearance of widget of Google Calendar Events (Trello #1397)
- reactor-primaria-1 and reactor-serveis-educatius: Added field email to Fitxa del Centre and modified behaviour of links for contact and map (Trello #1459)
- reactor-primaria-1 and reactor-serveis-educatius: Added id attribute to site logo (Trello #1477)
- bbpress: Converted into a submodule (Trello #1454)
- bbpress: Upgraded from version 2.5.8 to 2.5.11 (Trello #1454)
- tinymce-advanced: Upgraded from version 4.2.8 to 4.3.10.1 (Trello #1445)
- slideshare: Converted into a submodule (Trello #1453)